src/test/deca/syntax/valid/homemade/test/test_pars_val_instruction_instr_multiples.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction .
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    iden; iden;
}