src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_printx_oubli_expr.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le printx
//
// Resultats:
//    Ligne 12 : Erreur (oubli (expr))
//    
//
// Historique:
//    cree le 04/01/2023

{
    printx;
}
